--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,28 +1,28 @@
-*{
-    --dark-bg-color:#222222;
-    --dark-bg-color2:#333;
-    --dark-highlight-color:#333;
-    --light-bg-color:#dddddd;
-    --dark-text-color:#111111;
-    --light-text-color:#eeeeee;
-    --custom-red:#ff5555;
+* {
+    --dark-bg-color: #222222;
+    --dark-bg-color2: #333;
+    --dark-highlight-color: #333;
+    --light-bg-color: #dddddd;
+    --dark-text-color: #111111;
+    --light-text-color: #eeeeee;
+    --custom-red: #ff5555;
 }
-html, body {
+html,
+body {
     height: 100%;
-    margin:0;
-    background-color:var(--dark-bg-color);
+    margin: 0;
+    background-color: var(--dark-bg-color);
 }
 
 .container-fluid {
-    min-height:100%;
-    height:100%;
+    min-height: 100%;
+    height: 100%;
     text-align: center;
-    background-color:var(--dark-bg-color);
-    font-family: 'Roboto', sans-serif;
-    color:var(--light-text-color);
+    background-color: var(--dark-bg-color);
+    font-family: "Roboto", sans-serif;
+    color: var(--light-text-color);
 }
 
-#main{
-    padding: 1em 2em 2em 2em;
-    height:100%;
+#main {
+    height: 60px;
 }
